# pet-pc

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  pytest.ini
.claude/: settings.local.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
config/: default_config.json  user_config.json
docs/superpowers/plans/: 2026-04-21-settings-center-implementation.md
docs/superpowers/specs/: 2026-04-21-settings-center-design.md
scripts/: alignment_processor.py  anchor_detector.py  build.py  compress_animations.py  compress_remaining.py  create_gif.py  gif_to_apng.py  green_screen_to_Webp.py  green_screen_to_webp_gui.py  test.py  webp_tool.py
src/desktop_pet/: __init__.py  __main__.py  action_manager_gui.py  api_server.py  click_zone_dialog.py  config_manager.py  motion_control_panel.py  motion_controller.py  motion_listener.py  pet.py  pet_loader.py  settings_center.py  setup_wizard.py  startup_manager.py  state_machine.py  states.py  system_tray.py  utils.py
src/desktop_pet/settings_pages/: __init__.py  global_settings_page.py  new_pet_dialog.py  pet_config_page.py  pet_list_page.py
tests/: __init__.py  test_alignment_processor.py  test_anchor_detector.py  test_api_server.py  test_config_manager.py
tools/: Export_Layers_82_to_321.jsx
