[project]
name = "desktop-pet"
version = "1.0.0"
description = "A cute desktop pet application with animations and rest reminders"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6.0",
    "Pillow>=10.0.0",
]

[project.scripts]
desktop-pet = "desktop_pet.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/desktop_pet"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/assets",
]

[dependency-groups]
dev = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
]
